[project]
name = "j-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.1",
    "httpx>=0.28.1",
    "jesse>=1.10.4",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "python-dotenv>=0.19.2",
    "setuptools>=80.9.0",
    "uvicorn[standard]>=0.29.0",
]
